# timg

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: args.rs  lib_console.rs  main.rs  resizes.rs
src/unix/: console.rs
src/win/: console.rs
