[package]
edition = "2021"
name = "timg"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
image = "0.23"
termcolor = "1.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["wincon", "handleapi", "fileapi"]}
