cargo-features = ["edition2021"]

[package]
edition = "2021"
name = "timg"
version = "0.1.0"
rust-version = "1.58" 

[build]
target = "x86_64-unknown-linux-gnu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
clap = {version="3.0.7", features=["regex"]}
image = "0.23"
termcolor = "1.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = {version = "0.3.9", features = ["wincon", "handleapi", "fileapi"]}
